RESOLVED FIXED156229
[Curl][Soup] Fix the build after r199039
https://bugs.webkit.org/show_bug.cgi?id=156229
Summary [Curl][Soup] Fix the build after r199039
Hunseop Jeong
Reported 2016-04-04 22:34:56 PDT
https://build.webkit.org/builders/EFL%20Linux%2064-bit%20Release%20WK2/builds/27374/steps/compile-webkit/logs/stdio ../../Source/WebCore/Modules/websockets/WebSocketChannel.cpp: In member function ‘virtual void WebCore::WebSocketChannel::connect(const WebCore::URL&, const WTF::String&)’: ../../Source/WebCore/Modules/websockets/WebSocketChannel.cpp:113:142: error: no matching function for call to ‘WebCore::SocketStreamHandle::create(const WebCore::URL&, WebCore::WebSocketChannel*, WebCore::NetworkingContext&, bool)’ m_handle = SocketStreamHandle::create(m_handshake->url(), this, *networkingContext, (page ? page->usesEphemeralSession() : false)); ^ In file included from ../../Source/WebCore/Modules/websockets/WebSocketChannel.cpp:52:0: ../../Source/WebCore/platform/network/soup/SocketStreamHandle.h:53:47: note: candidate: static WTF::PassRefPtr<WebCore::SocketStreamHandle> WebCore::SocketStreamHandle::create(const WebCore::URL&, WebCore::SocketStreamHandleClient*, WebCore::NetworkingContext&) static PassRefPtr<SocketStreamHandle> create(const URL& url, SocketStreamHandleClient* client, NetworkingContext&) { return adoptRef(new SocketStreamHandle(url, client)); } ^ ../../Source/WebCore/platform/network/soup/SocketStreamHandle.h:53:47: note: candidate expects 3 arguments, 4 provided In file included from ../../Source/WebCore/Modules/websockets/WebSocketChannel.cpp:52:0: ../../Source/WebCore/platform/network/soup/SocketStreamHandle.h:54:47: note: candidate: static WTF::PassRefPtr<WebCore::SocketStreamHandle> WebCore::SocketStreamHandle::create(GSocketConnection*, WebCore::SocketStreamHandleClient*) static PassRefPtr<SocketStreamHandle> create(GSocketConnection* socketConnection, SocketStreamHandleClient* client) { return adoptRef(new SocketStreamHandle(socketConnection, client)); } ^ ../../Source/WebCore/platform/network/soup/SocketStreamHandle.h:54:47: note: candidate expects 2 arguments, 4 provided
Attachments
Patch (2.58 KB, patch)
2016-04-04 22:36 PDT, Hunseop Jeong
no flags
Hunseop Jeong
Comment 1 2016-04-04 22:36:37 PDT
WebKit Commit Bot
Comment 2 2016-04-05 00:04:32 PDT
Comment on attachment 275641 [details] Patch Clearing flags on attachment: 275641 Committed r199053: <http://trac.webkit.org/changeset/199053>
WebKit Commit Bot
Comment 3 2016-04-05 00:04:37 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.