[Curl][Soup] Fix the build after r199039 https://bugs.webkit.org/show_bug.cgi?id=156229

Reviewed by Žan Doberšek.

* platform/network/curl/SocketStreamHandle.h:
(WebCore::SocketStreamHandle::create):
* platform/network/soup/SocketStreamHandle.h:
(WebCore::SocketStreamHandle::create):


Canonical link: https://commits.webkit.org/174328@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199053 268f45cc-cd09-0410-ab3c-d52691b4dbfc